--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,5 +9,5 @@ bind -n S-Left previous-window
 bind -n S-Right next-window
 
 # Set easier window split keys
-bind-key _ split-window -h
-bind-key | split-window -v
+bind-key | split-window -h
+bind-key _ split-window -v
