--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,7 @@ bind -n S-Right next-window
 # Set easier window split keys
 bind-key | split-window -h
 bind-key _ split-window -v
+
+# enable mouse mode by default
+set -g mouse on          # for tmux version 2.1 and up
+# set -g mode-mouse on   # for tmux version < 2.1
