--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ bind -n S-Right next-window
 bind-key | split-window -h
 bind-key _ split-window -v
 
-# enable mouse mode by default
-set -g mouse on          # for tmux version 2.1 and up
-# set -g mode-mouse on   # for tmux version < 2.1
+# Toggle Synchronize with a
+bind-key a set synchronize-panes \; display-message 'Synchronize-panes #{?synchronize-panes,on,off}'
+
+# Toggle mouse-mode with m
+bind-key m set mouse \; display-message 'Mouse-mode #{?Mouse,on,off}'
